RESOLVED FIXED146700
Occasional null deref in the CA callback in flushLayers()
https://bugs.webkit.org/show_bug.cgi?id=146700
Summary Occasional null deref in the CA callback in flushLayers()
Tim Horton
Reported 2015-07-07 16:18:14 PDT
Occasional null deref in the CA callback in flushLayers()
Attachments
Patch (2.11 KB, patch)
2015-07-07 16:19 PDT, Tim Horton
no flags
Patch (3.36 KB, patch)
2015-07-07 16:25 PDT, Tim Horton
no flags
Patch (3.36 KB, patch)
2015-07-07 16:46 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2015-07-07 16:19:36 PDT
Simon Fraser (smfr)
Comment 2 2015-07-07 16:23:24 PDT
Comment on attachment 256328 [details] Patch There's another one in RemoteLTDA.
Tim Horton
Comment 3 2015-07-07 16:25:45 PDT
Tim Horton
Comment 4 2015-07-07 16:26:05 PDT
(In reply to comment #2) > Comment on attachment 256328 [details] > Patch > > There's another one in RemoteLTDA. So there is.
Simon Fraser (smfr)
Comment 5 2015-07-07 16:40:39 PDT
Comment on attachment 256329 [details] Patch Splendid.
Tim Horton
Comment 6 2015-07-07 16:46:17 PDT
Tim Horton
Comment 7 2015-07-07 16:55:46 PDT
Note You need to log in before you can comment on or make changes to this bug.