Occasional null deref in the CA callback in flushLayers() https://bugs.webkit.org/show_bug.cgi?id=146700 <rdar://problem/21668754>

Reviewed by Simon Fraser.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::flushLayers):
* WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.mm:
(WebKit::RemoteLayerTreeDrawingArea::flushLayers):
Make sure we keep the WebPage alive, and null-check the potentially null
WebCore objects (Page and Frame).


Canonical link: https://commits.webkit.org/164792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186485 268f45cc-cd09-0410-ab3c-d52691b4dbfc